Fix logo and spacing

--- a/xpd-web/static/main.css
+++ b/xpd-web/static/main.css
@@ -12,6 +12,9 @@ body {
 
 main {
   max-width: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .bot-name {
@@ -198,6 +201,10 @@ a:visited {
 
 .menu-title {
   font-size: xx-large;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
 }
 
 .menu-button-container {
